chore(bazel): Simplify obtaining the Bazel version
Using the default `bazel --version` is simpler and more resilient in
case of mis-configuration, such as the disk cache pointing to a
non-existing directory.

Signed-off-by: Frank Viernau <frank_viernau@epam.com>